--- a/src/components/Reviews.module.css
+++ b/src/components/Reviews.module.css
@@ -1,5 +1,5 @@
 .section {
-    padding: 4rem 0 6rem 0;
+    padding: 4rem 0 12rem 0;
     background-color: var(--off-white);
     overflow: hidden;
 }
